demo/k8s/demo-k8s-yaml/theia-cloud-demo-ws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theia-cloud-demo-ws-ingress
  namespace: theiacloud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls: 
  - hosts:
    - 34.159.179.89.nip.io
    secretName: theia-cloud-workspaces-cert-secret
  rules:
    - host: 34.159.179.89.nip.io
